--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="flex flex-wrap -m-4">
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="/static/images/password manager.jpg" alt="Password_manager">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/password manager.jpg" alt="Password_manager">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Password manager</h1>
@@ -77,7 +77,7 @@
             </div>
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="/static/images/quizzler.jpg" alt="quizzler">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/quizzler.jpg" alt="quizzler">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Quizzler</h1>
@@ -95,7 +95,7 @@
             </div>
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="/static/images/Birthday wisher.jpg" alt="Birthday wisher">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Birthday wisher.jpg" alt="Birthday wisher">
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Birthday wisher</h1>
@@ -113,7 +113,7 @@
             </div>
             <div class="p-4 md:w-1/4">
                 <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="/static/images/Crossing game.jpg" alt="Turtle crossing game">
+                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Crossing game.jpg" alt="Turtle crossing game">
                   <div class="p-6">
                     <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                     <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Turtle crossing game</h1>
