--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <b><a class="mr-8 hover:text-black" href="#About">About me</a>
-            <a class="mr-8 hover:text-black" href="/static/ishika mittal resume.pdf" download>Resume</a>
+            <a class="mr-8 hover:text-black" href="https://github.com/ishikaamittal/Portfolio/blob/2d584d9fd04e7e8cc5cf5d64762d79fb6324e8c5/static/ishika%20mittal%20resume.pdf" download>Resume</a>
             <a class="mr-8 hover:text-black" href="#projects">Projects</a>
             <a class="mr-8 hover:text-black" href="#contacts">Contact</a></b>
           </nav>
