--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
         <div class="container px-5 py-24 mx-auto flex flex-wrap">
           <div class="flex flex-wrap -mx-4 mt-auto mb-auto lg:w-1/2 sm:w-2/3 content-start sm:pr-10">
             <div class="w-full sm:p-4 px-4 mb-6">
-              <h1 class="title-font font-medium text-xl mb-2 text-yellow-600">Hey! I am Ishika Mittal</h1>
-              <div class="leading-relaxed">I am python Developer, on the way to learn new techs and experience.</div>
+              <h1 class="title-font font-medium text-5xl mb-2 text-yellow-600">Hey! I am Ishika Mittal</h1>
+              <div class="leading-relaxed text-xl">I am python Developer, on the way to learn new techs and experience.</div>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h3 class="title-font font-medium text-3xl text-yellow-700">HTML</h3>
+              <h3 class="title-font font-medium text-2xl text-yellow-700">HTML</h3>
               <p class="leading-relaxed"></p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h3 class="title-font font-medium text-3xl text-yellow-700">CSS</h3>
+              <h3 class="title-font font-medium text-2xl text-yellow-700">CSS</h3>
               <p class="leading-relaxed"></p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h3 class="title-font font-medium text-3xl text-yellow-700">Python</h3>
+              <h3 class="title-font font-medium text-2xl text-yellow-700">Python</h3>
               <p class="leading-relaxed"></p>
             </div>
             <div class="p-4 sm:w-1/2 lg:w-1/4 w-1/2">
-              <h3 class="title-font font-medium text-3xl text-yellow-700">Django</h3>
+              <h3 class="title-font font-medium text-2xl text-yellow-700">Django</h3>
               <p class="leading-relaxed"></p>
             </div>
           </div>
