--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                   <div class="p-6">
                     <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                     <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Turtle crossing game</h1>
-                    <p class="leading-relaxed mb-3">This game has different level and in every level the speed of vehical will be increase
+                    <p class="leading-relaxed mb-3">This game has different level and in every level the speed of vehicle will be increase
                       Our main target is to control turtle with UP arrow button and help him to cross road</p>
                     <div class="flex items-center flex-wrap ">
                       <a class="text-yellow-600 inline-flex items-center md:mb-2 lg:mb-0" href="https://github.com/ishikaamittal/Turtle_crossing_game">Learn More
