--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
           <div class="flex flex-wrap -m-4">
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/passwordmanager.webp" alt="Password_manager">
-                <div class="p-6">
+                <a href="https://github.com/ishikaamittal/Password_manager_project"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/passwordmanager.webp" alt="Password_manager">
+                  </a><div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Password manager</h1>
                   <p class="leading-relaxed mb-3">Password manager is a simple project using python. It is a command based which helps in storing and generating account's passwords from the user input.</p>
