--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
         </div>
       </section>
       <hr>
-      <section class="text-black body-font align-content: center;" id="projects">
+       <section class="text-black body-font align-content: center;" id="projects">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-4">
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <a href="https://github.com/ishikaamittal/Password_manager_project"><img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/passwordmanager.webp" alt="Password_manager">
-                  </a><div class="p-6">
+                <a href="https://github.com/ishikaamittal/Password_manager_project">
+                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/passwordmanager.webp" alt="Password_manager"></a>
+                <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Password manager</h1>
                   <p class="leading-relaxed mb-3">Password manager is a simple project using python. It is a command based which helps in storing and generating account's passwords from the user input.</p>
@@ -77,7 +78,8 @@
             </div>
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/quizzler.webp" alt="quizzler">
+                <a href="https://github.com/ishikaamittal/Quizzler">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/quizzler.webp" alt="quizzler"></a>
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Quizzler</h1>
@@ -95,7 +97,8 @@
             </div>
             <div class="p-4 md:w-1/4">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Birthdaywisher.webp" alt="Birthday wisher">
+                <a href="https://github.com/ishikaamittal/birthday_wisher_through_mail">
+                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Birthdaywisher.webp" alt="Birthday wisher"></a>
                 <div class="p-6">
                   <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                   <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Birthday wisher</h1>
@@ -113,11 +116,12 @@
             </div>
             <div class="p-4 md:w-1/4">
                 <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Crossinggame.webp" alt="Turtle crossing game">
+                  <a href="https://github.com/ishikaamittal/Turtle_crossing_game">
+                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Crossinggame.webp" alt="Turtle crossing game"></a>
                   <div class="p-6">
                     <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
                     <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Turtle crossing game</h1>
-                    <p class="leading-relaxed mb-3">This game has different level and in every level the speed of vehicle will be increase
+                    <p class="leading-relaxed mb-3">This game has different level and in every level the speed of vehical will be increase
                       Our main target is to control turtle with UP arrow button and help him to cross road</p>
                     <div class="flex items-center flex-wrap ">
                       <a class="text-yellow-600 inline-flex items-center md:mb-2 lg:mb-0" href="https://github.com/ishikaamittal/Turtle_crossing_game">Learn More
