--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           
             <nav class="md:ml-auto md:mr-auto flex flex-wrap items-center text-base justify-center">
             <b><a class="mr-8 hover:text-black" href="#About">About me</a>
-            <a class="mr-8 hover:text-black" href="https://github.com/ishikaamittal/Portfolio/blob/2d584d9fd04e7e8cc5cf5d64762d79fb6324e8c5/static/ishika%20mittal%20resume.pdf" download>Resume</a>
+            <a class="mr-8 hover:text-black" href="/static/ishika mittal resume.pdf" download>Resume</a>
             <a class="mr-8 hover:text-black" href="#projects">Projects</a>
             <a class="mr-8 hover:text-black" href="#contacts">Contact</a></b>
           </nav>
@@ -54,10 +54,10 @@
         </div>
       </section>
       <hr>
-        <section class="text-black body-font align-content: center;" id="projects">
+      <section class="text-black body-font align-content: center;" id="projects">
         <div class="container px-5 py-24 mx-auto">
           <div class="flex flex-wrap -m-4">
-            <div class="p-4 md:w-1/4">
+            <div class="p-4 md:w-1/2">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
                 <a href="https://github.com/ishikaamittal/Password_manager_project">
                   <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/passwordmanager.webp" alt="Password_manager"></a>
@@ -76,7 +76,7 @@
                 </div>
               </div>
             </div>
-            <div class="p-4 md:w-1/4">
+            <div class="p-4 md:w-1/2">
               <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);">
                 <a href="https://github.com/ishikaamittal/Quizzler">
                 <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/quizzler.webp" alt="quizzler"></a>
@@ -95,45 +95,6 @@
                 </div>
               </div>
             </div>
-            <div class="p-4 md:w-1/4">
-              <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                <a href="https://github.com/ishikaamittal/birthday_wisher_through_mail">
-                <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Birthdaywisher.webp" alt="Birthday wisher"></a>
-                <div class="p-6">
-                  <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
-                  <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Birthday wisher</h1>
-                  <p class="leading-relaxed mb-3">This project is to send birthday wishes through mails as birth dates of your friends and families are stored in it manually. Whenever the birthdates will fall on the calender it will automatically send the mails from your side.</p>
-                  <div class="flex items-center flex-wrap ">
-                    <a class="text-yellow-600 inline-flex items-center md:mb-2 lg:mb-0" href="https://github.com/ishikaamittal/birthday_wisher_through_mail">Learn More
-                      <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M5 12h14"></path>
-                        <path d="M12 5l7 7-7 7"></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="p-4 md:w-1/4">
-                <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden" style="background-color: rgb(240, 232, 208);"> 
-                  <a href="https://github.com/ishikaamittal/Turtle_crossing_game">
-                  <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="static/images/Crossinggame.webp" alt="Turtle crossing game"></a>
-                  <div class="p-6">
-                    <h2 class="tracking-widest text-xs title-font font-medium text-black mb-1">Python</h2>
-                    <h1 class="title-font text-lg font-medium text-yellow-600 mb-3">Turtle crossing game</h1>
-                    <p class="leading-relaxed mb-3">This game has different level and in every level the speed of vehical will be increase
-                      Our main target is to control turtle with UP arrow button and help him to cross road</p>
-                    <div class="flex items-center flex-wrap ">
-                      <a class="text-yellow-600 inline-flex items-center md:mb-2 lg:mb-0" href="https://github.com/ishikaamittal/Turtle_crossing_game">Learn More
-                        <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                          <path d="M5 12h14"></path>
-                          <path d="M12 5l7 7-7 7"></path>
-                        </svg>
-                      </a>
-                    </div>
-                  </div>
-                </div>
-              </div>
           </div>
         </div>
       </section>
